<resources>
    <string name="app_name">fridgeful</string>
    <string name="textview">TextView</string>
    <string name="hint">hint</string>
    <string name="wc">Welcome</string>
    <string name="fridge">FRIDGE</string>
    <string name="gs">Get Started</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="gr">Get Recipes</string>
    <string name="i">Ingredients</string>
    <string name="done">Done</string>
    <string name="expired_in">Expired in...</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="popular_recipe">Popular Recipe</string>
    <string-array name="food">
        <item>Food Group</item>
        <item>Vegetable</item>
        <item>Protein</item>
        <item>Grain</item>
        <item>Fruit</item>
        <item>Dairy</item>
    </string-array>
    <string name="recipes">\t\t\tRecipes</string>
    <string name="pop">Most Popular</string>
    <string name="r1">Chicken Noodle Soup</string>
    <string name="r2">Braised Chicken with Carrots</string>
    <string name="r3">Roasted Carrots</string>
    <string name="r4">Roasted Potatoes and Carrots</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="r22">Balanced - includes all food groups. Misses an Ingredient that will Expires in 5 Day</string>
    <string name="r11">Covers 4 Food Groups - Missing Dairy. Uses All the Ingredients that Expires in 1 Days from Today</string>
</resources>
