<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecListActivity">

    <TextView
        android:id="@+id/recipes"
        android:layout_width="409dp"
        android:layout_height="67dp"
        android:layout_marginBottom="16dp"
        android:background="#7DAD50"
        android:gravity="bottom"
        android:paddingHorizontal="7dp"
        android:paddingVertical="8dp"
        android:text="@string/recipes"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/corben_bold"
        app:layout_constraintBottom_toTopOf="@+id/pop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/pop"
        app:fontFamily="@font/corben_bold"
        app:layout_constraintBottom_toTopOf="@+id/recipe1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes" />

    <Button
        android:id="@+id/recipe1"
        android:layout_width="360dp"
        android:layout_height="167dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/soup"
        android:gravity="start|bottom"
        android:onClick="onClick"
        android:text="@string/r1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pop" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="57dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:paddingTop="0dp"
        android:paddingBottom="10dp"
        android:text="@string/r11"
        app:layout_constraintBottom_toTopOf="@+id/recipe2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe1" />

    <Button
        android:id="@+id/recipe2"
        android:layout_width="360dp"
        android:layout_height="167dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/braisedchicken"
        android:gravity="start|bottom"
        android:text="@string/r2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="358dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="7dp"
        android:text="@string/r22"
        app:layout_constraintBottom_toTopOf="@+id/recipe3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe2" />

    <Button
        android:id="@+id/recipe3"
        android:layout_width="360dp"
        android:layout_height="167dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/carrot"
        android:gravity="start|bottom"
        android:text="@string/r3"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe2" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        app:backgroundTint="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back" />

</androidx.constraintlayout.widget.ConstraintLayout>